src/test/ui/const-generics/issues/issue-67739.min.stderr
error: generic parameters may not be used in const operations
  --> $DIR/issue-67739.rs:12:30
   |
LL |         [0u8; mem::size_of::<Self::Associated>()];
   |                              ^^^^^^^^^^^^^^^^ cannot perform const operation using `Self`
   |
   = note: type parameters may not be used in const expressions

error: aborting due to previous error

